OC-13570 Fixed Form Designer Calc Trigger field layout issue.

--- a/jsapp/scss/stylesheets/partials/form_builder/_card_settings.scss
+++ b/jsapp/scss/stylesheets/partials/form_builder/_card_settings.scss
@@ -115,6 +115,13 @@
     }
   }
 
+  &.xlf-dv-trigger {
+    select {
+      max-width: 85%;
+      padding: 4px;
+    }
+  }
+
   input[type="text"] {
     width: 85%;
     padding: 2px;
